--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
       <version>2.10.0</version>
     </dependency>
 
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.quartz-scheduler/quartz &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.quartz-scheduler</groupId>-->
-      <!--<artifactId>quartz</artifactId>-->
-      <!--<version>2.3.2</version>-->
-    <!--</dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.2</version>
+    </dependency>
 
 
 
